Fix position of subway line style element on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -245,6 +245,9 @@ footer .footer {
       }
       &.is-11 {
         padding: 5rem 1.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
     }
 
